--- a/.github/workflows/python-package-conda1.yml
+++ b/.github/workflows/python-package-conda1.yml
@@ -10,7 +10,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up Python 3.11
+    - name: Set up Python 3.11.0-alpha.2
       uses: actions/setup-python@v2
       with:
         python-version: 3.10
